Fix overlapping nav in Interests page

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ nav {
   padding: 10px;
   position: fixed;
   text-align: center;
+  top: 0;
 }
 .nav {
   display: flex;
